[package]
name = "rusty-vnsync-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "vnsync_server"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.68"
dyn-clone = "1.0.11"
mockall = { version = "0.11.4", features = ["nightly"] }
mockall_double = "0.3.0"
nanoid = "0.4.0"
ractor = { version = "0.7.5", features = ["cluster"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
simple-websockets = "0.1.5"
tokio = { version = "1.27.0", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["full"] }

